Vista para reemplazar al coord de eval

--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -218,7 +218,7 @@
 																					<td><b>Nombre y Apellido: </b><%- coordPlani.nombre %> <%- coordPlani.apellido %></td>
 																				</tr>
 																				<tr>
-																					<td><b>Cedula de Identidad: </b><%- coordEval.cedula %></td>
+																					<td><b>Cedula de Identidad: </b><%- coordPlani.cedula %></td>
 																				</tr>
 																				<tr>
 																					<td>
@@ -267,7 +267,7 @@
 																				<tr>
 																					<td>
 																						<% if(coordEval) {%>
-																							<a href="/president/cambiar_coordEval/<%- coordEval.cedula %>">
+																							<a href="/president/cambiar_coordE">
 																					        Cambiar
 																					    </a>
 																						<%}%>
