--- a/app/views/president/cambiar/coordP.html
+++ b/app/views/president/cambiar/coordP.html
@@ -18,9 +18,9 @@
 
 	<%- include('../../partials/president/navbar.html') %>
 
-	<div class="container-fluid">
+	<div class="container-fluid" id="main">
 		<div class="row justify-content-md-center">
-			<div class="col-md-10">
+			<div class="col-md-12">
 				<div class="row">
 					<div class="col-md-12">
 						<!--=======MIGAS DE PAN=========-->
@@ -44,10 +44,10 @@
 								  
 								  	<div class="card-body">
 								    	<div class="form-group">
-								    		<p><b>Nombre: </b><%= usuario.nombre %></p>
-								    		<p><b>Apellido: </b><%= usuario.apellido %></p>
-								    		<p><b>Nucleo: </b><%= usuario.nucleoCodigo %></p>
-								    		<p><b>Unidad: </b><%= usuario.unidadCodigo %></p>
+								    		<p><b>Nombre: </b><%- Usuario.nombre %></p>
+								    		<p><b>Apellido: </b><%- Usuario.apellido %></p>
+								    		<p><b>Nucleo: </b><%- Usuario.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%- Usuario.unidad.nombre %></p>
 								    	</div>
 								  	</div>
 								</div>
@@ -59,22 +59,58 @@
 
 					<div class="col-lg-9">
 						<div class="row">
+							<div class="col-sm-12 col-md-12 col-lg-12">
+								<div class="card">
+									<div class="card-body">
+										
+											<div class="input-group mb-3">
+												<input type="text" class="form-control" placeholder="Ingrese la Cedula del Remplazo" v-model="cedula" v-on:keyup.enter="getUsuario(cedula)">
+											  	<div class="input-group-append">
+											    	<button class="btn btn-outline-secondary" type="submit" id="button-addon2">Button</button>
+											  	</div>
+											</div>
+										
+									</div>
+								</div>
+								<br>
+							</div>
+
 							<div class="col-sm-12 col-md-12 col-lg-5">
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
 											<h3>Coord. de Planificación</h3>
 										</div>
-										<div class="row" style="margin-top: 10px">
-											<div class="col-sm-4 col-md-5 col-lg-4 text-center">
-												<img src="/images/img/user.png" alt="" class="img-thumbnail">
+										<br>
+										<div class="article border-bottom">
+											<div class="text-center">
+												<img src="/images/img/user.png" class="rounded-circle img-fluid" alt="Cinque Terre" style="width: 50%">
 											</div>
-											<div class="col-sm-8 col-md-7 col-lg-8">
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nombre: </b><%- coordPlani.nombre %></p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Apellido: </b><%- coordPlani.apellido %></p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>C.I: </b><%- coordPlani.cedula %></p>
-											</div>
+											<br>
 										</div>
+										<br>
+										<fieldset disabled>
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+												<div class="col-sm-9">
+													<input type="text" class="form-control form-control-sm" v-model="coord.nombre">
+												</div>
+											</div>
+
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+												<div class="col-sm-9">
+												   	<input type="text" class="form-control form-control-sm" v-model="coord.apellido">
+												</div>
+											</div>
+
+											<div class="form-group row">
+											    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+											    <div class="col-sm-9">
+											    	<input type="text" class="form-control form-control-sm" v-model="coord.cedula">
+											    </div>
+											</div>
+										</fieldset>
 									</div>
 								</div>
 							</div>
@@ -82,35 +118,71 @@
 							<div class="col-sm-12 col-md-12 col-lg-2 text-center">
 								<p style="font-size: 50pt"><span class="glyphicon glyphicon-log-in" ></span><i class="fa fa-exchange"></i></p>
 							</div>
-
+								
 							<div class="col-sm-12 col-md-12 col-lg-5">
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
-											<h3>Reemplazo</h3>
+											<h3>Candidato</h3>
 										</div>
-										<div class="row justify-content-md-center" style="margin-top: 10px">
-											<div class="col-lg-8">
-												<br><br>
-												<form method="POST" action="/president/cambiar_coordP/<%- coordPlani.cedula %>/buscar">
-													<div class="form-group">
-														<div class="input-group mb-3">
-														  	<div class="input-group-prepend">
-														    	<span class="input-group-text" id="basic-addon1">Cedula: </span>
-														  	</div>
-														  	<input type="text" name="cedula" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-														</div>	
-													</div>
-													<div class="form-group text-center">
-														<input class="btn btn-primary" type="submit" name="buscar" value="Buscar">	
-													</div>
-													<br>
-												</form>
+										<br>
+										<div class="article border-bottom">
+											<div class="text-center">
+												<img src="/images/img/user.png" class="rounded-circle img-fluid" alt="Cinque Terre" style="width: 50%">
 											</div>
+											<br>
 										</div>
+										<br>
+										<fieldset disabled>
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+												<div class="col-sm-9">
+													<input type="text" class="form-control form-control-sm" v-model="usuario.nombre">
+												</div>
+											</div>
+
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+												<div class="col-sm-9">
+												   	<input type="text" class="form-control form-control-sm" v-model="usuario.apellido">
+												</div>
+											</div>
+
+											<div class="form-group row">
+											    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+											    <div class="col-sm-9">
+											    	<input type="text" class="form-control form-control-sm" v-model="usuario.cedula">
+											    </div>
+											</div>
+										</fieldset>
+										
 									</div>
 								</div>
 							</div>
+
+							<div class="col-md-12">
+								<hr>
+								<form onsubmit="return confirm('¿Esta Seguro de Reemplazar al Corrd. Planificación?')" method="POST" action="/president/updateCoord">
+									<!--==========Datos del reemplazado=============-->
+									<input type="hidden" name="cedulaReemplazado" v-model="coord.cedula">
+									<input type="hidden" name="nucleoReemplazado" v-model="coord.nucleoCodigo">
+									<input type="hidden" name="unidadReemplazado" v-model="coord.unidadCodigo">
+									<input type="hidden" name="cargoReemplazado" v-model="coord.cargoId">
+									<input type="hidden" name="rolReemplazado" v-model="coord.rolId">
+
+									<!--============Datos del Candidato======================-->
+									<input type="hidden" name="cedulaCandidato" v-model="usuario.cedula">
+									<input type="hidden" name="nucleoCandidato" v-model="usuario.nucleoCodigo">
+									<input type="hidden" name="unidadCandidato" v-model="usuario.unidadCodigo">
+									<input type="hidden" name="cargoCandidato" v-model="usuario.cargoId">
+									<input type="hidden" name="rolCandidato" v-model="usuario.rolId">
+
+
+									<div class="form-group" v-if="variable">
+										<input type="submit" name="cambiar" value="Reemplazar" class="btn btn-primary btn-block btn-lg">	
+									</div>
+								</form>
+							</div>				
 						</div>
 					</div>
 				</div>		
@@ -129,5 +201,45 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
 	<script src="/js/main.js"></script>
+	<script src="/js/vue.js"></script>
+	<script src="/js/axios.js"></script>
+	<script type="text/javascript">
+		new Vue({
+			el: '#main',
+			data: {
+				cedula: '',
+				usuario: {},
+				coord: {},
+				variable: false
+			}, 
+			created() {
+				this.getCoordP()
+			},
+			methods: {
+				getCoordP() {
+					axios.get('/getCoordP')
+						.then(res => {
+							this.coord = res.data
+						}).catch(err => {
+							console.log(err)
+						})
+				},
+				getUsuario(cedula) {
+					if(this.coord.cedula == cedula) {
+						alert("La Cedula Ingresada No puede ser Igual al del Coordinador de Planificacion Actual")
+					} else{
+						axios.get('/getUsuario/' + cedula)
+							.then(res => {
+								this.usuario = res.data;
+								this.variable = true
+								this.cedula = ''
+							}).catch(err => {
+								console.log(err)
+							})	
+					}
+				}
+			}
+		})
+	</script>
 </body>
 </html>
