definiendo algunos onDelete

--- a/app/views/president/cambiar/coordP.html
+++ b/app/views/president/cambiar/coordP.html
@@ -26,7 +26,8 @@
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
-							    <li class="breadcrumb-item active" aria-current="page">Home</li>
+							    <li class="breadcrumb-item active" aria-current="page"><a href="/president">Home</a></li>
+								<li class="breadcrumb-item active" aria-current="page">Cambiar</li>
 							</ol>
 						</nav>
 						<!--=======FIN MIGAS DE PAN=========-->		
