--- a/app/views/admin/cambiar/coordPlani.html
+++ b/app/views/admin/cambiar/coordPlani.html
@@ -16,7 +16,7 @@
 		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 	</div>	
 
-	<%- include('../../partials/president/navbar.html') %>
+	<%- include('../../partials/admin/navbar.html') %>
 
 	<div class="container-fluid" id="main">
 		<div class="row justify-content-md-center">
@@ -26,7 +26,7 @@
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
-							    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+							    <li class="breadcrumb-item" aria-current="page"><a href="/admin">Home</a></li>
 							    <li class="breadcrumb-item active" aria-current="page">Cambiar</li>
 							</ol>
 						</nav>
