--- a/app/views/president/historial/index.html
+++ b/app/views/president/historial/index.html
@@ -24,7 +24,7 @@
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
-							    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+							    <li class="breadcrumb-item" aria-current="page"><a href="/president">Home</a></li>
 							    <li class="breadcrumb-item active" aria-current="page">Historial</li>
 							</ol>
 						</nav>
