--- a/app/views/president/nucleos/index.html
+++ b/app/views/president/nucleos/index.html
@@ -30,7 +30,7 @@
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb" style="margin-top: 1%">
 					<ol class="breadcrumb">
-					    <li class="breadcrumb-item" aria-current="page">Home</li>
+					    <li class="breadcrumb-item" aria-current="page"><a href="/president">Home</a></li>
 					    <li class="breadcrumb-item active" aria-current="page">Nucleos</li>
 					</ol>
 				</nav>
