--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -150,23 +150,31 @@
 						<!--=====FIN SUB COMISIONES========-->
 
 						<!--========Evaluaciones===========-->
-						<div class="col-md-12">
-							<div class="row">
-								<div class="col-md-12 text-center">
-									<h3>Evaluar es Nuestro deber con la Instutución</h3>
-								</div>
-								<div class="col-md-12 text-center">
-									<div class="row">
-										<div class="col-md-4">
-											Personal Admin
-										</div>
+						<div class="col-md-12" style="background: #C3C7C8; padding-top: 30px; padding-bottom: 30px">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12 text-center">
+										<h3>Evaluar es Nuestro deber con la Institución</h3>
+									</div>
+									<div class="col-md-12 text-center" style="padding-top: 20px;">
+										<div class="row">
+											<div class="col-md-4">
+												<img src="images/img/admin1.png">
+												<br><br>
+												<a href="" class="btn btn-primary">Personal Admin</a>
+											</div>
 
-										<div class="col-md-4">
-											Centros de Investigacion
-										</div>
+											<div class="col-md-4">
+												<img src="images/img/centro1.png">
+												<br><br>
+												<a href="" class="btn btn-primary">Centros de Investigacion</a>
+											</div>
 
-										<div class="col-md-4">
-											Personal Docente
+											<div class="col-md-4">
+												<img src="images/img/docente.png">
+												<br><br>
+												<a href="" class="btn btn-primary">Personal Docente</a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -175,22 +183,85 @@
 						<!--=====Fin Evaluaciones==========-->
 
 						<!--======Info Estatica============-->
-						<div class="col-md-12 text-center">
-							<div class="row">
-								<div class="col-md-4">
-									Seguimiento
-								</div>
+						<div class="col-md-12 text-center" style="background: #E6F7FB; padding-top: 30px; padding-bottom: 30px">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-4">
+										<p style="font-size: 20pt; color: #10778F"><i class="fa fa-pencil" aria-hidden="true"></i> Seguimiento</p>
+										<p style="color: #10778F">
+											Supervisión directa de gestión y desempeño en todas las entidades correspondientes y adscritas a la Universidad de Oriente en toda su extención a nivel nacional.
+										</p>
+									</div>
 
-								<div class="col-md-4">
-									Capacitación
-								</div>
+									<div class="col-md-4">
+										<p style="font-size: 20pt; color: #10778F"><i class="fa fa-cog" aria-hidden="true"></i> Capacitación</p>
+										<p style="color: #10778F">
+											Mantener nuestro personal actualizado es lo más importante, impartiendo técnicas y métodos actualizados para mejorar su rendimiento y gestión.
+										</p>
+									</div>
 
-								<div class="col-md-4">
-									Trabajo en Equipo
+									<div class="col-md-4">
+										<p style="font-size: 20pt; color: #10778F"><i class="fa fa-star" aria-hidden="true"></i> Trabajo en Equipo</p>
+										<p style="color: #10778F">
+											Nuestra dependencia trabaja en conjunto con todas sus unidades para llevar a cabo los procesos internos de forma satisfactoria; como la ejecución de las evaluaciones, actividades, entre otras.
+										</p>
+									</div>
 								</div>
 							</div>
 						</div>
 						<!--=======Fin Info Estatica=======-->
+
+						<!--===========Junta Directiva=======-->
+						<div class="col-md-12" style="padding-top: 20px; padding-bottom: 20px">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12 text-center">
+										<h3>Junta Directiva de Nuestra Dependencia</h3>
+									</div>
+
+									<div class="col-md-12" style="padding-top: 15px">
+										<div class="row">
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>
+
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>
+
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>
+
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>
+
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>
+
+											<div class="col-sm-6 col-md-2 text-center">
+												<img src="images/img/presidenta.png">
+												<p>Andres De La cruz</p>
+											</div>	
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--========fin Junta Directiva=======-->
+
+						<!--=========Noticias=========-->
+						<div class="col-md-12">
+							
+						</div>
+						<!--=======Fin Noticias=======-->
 					</div>
 				</div>
 			</div>
