--- a/app/views/admin/asignar/coord_plani.html
+++ b/app/views/admin/asignar/coord_plani.html
@@ -16,7 +16,7 @@
 		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 	</div>	
 
-	<%- include('../../partials/president/navbar.html') %>
+	<%- include('../../partials/admin/navbar.html') %>
 
 	<div class="container-fluid" id="main">
 		<div class="row justify-content-md-center">
