--- a/app/views/index/loginCrediudo.html
+++ b/app/views/index/loginCrediudo.html
@@ -64,7 +64,7 @@
 				  		<form id="login" name="login" method="post" action="/loginCrediudo">
 							<div class="form-group">
 								<label for="cedula">Cedula de Identidad: </label>
-								<input type="text" name="cedula" class="form-control" id="cedula" placeholder="Ingrese sus cedula de Identidad" autofocus>
+								<input type="text" name="cedula" class="form-control" id="cedula" placeholder="Ingrese sus cedula de Identidad" onkeypress='return validaNumericos(event)' autofocus>
 							</div>
 
 							<div class="form-group">
@@ -100,6 +100,7 @@
 
 	<script src="/js/vue.js"></script>
 	<script src="/js/axios.js"></script>
+	<script src="/js/misFunciones.js"></script>
 	<script type="text/javascript">
 		new Vue({
 			el: '#main',
