asignando coord de evaluacion

--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -280,7 +280,7 @@
 																					</tr>
 																				</table>
 																			<%} else {%>
-																				<a href="#">Asignar</a>
+																				<a href="/president/asignar-CoordE">Asignar</a>
 																			<%}%>
 																		</div>
 																	</div>
