--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
 		<!-- Custom styles for this template -->
     	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">
+    	<link href="/css/carrusel.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -259,14 +260,53 @@
 
 						<!--=========Noticias=========-->
 						<div class="col-md-12">
-							
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12 text-center">
+										<h3>Noticias</h3>
+									</div>
+
+									<div class="col-md-4">
+										<div class="card" style="width: 18rem;">
+										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
+										  <div class="card-body">
+										    <h5 class="card-title">Card title</h5>
+										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+										  </div>
+										</div>
+									</div>
+
+									<div class="col-md-4">
+										<div class="card" style="width: 18rem;">
+										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
+										  <div class="card-body">
+										    <h5 class="card-title">Card title</h5>
+										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+										  </div>
+										</div>
+									</div>
+
+									<div class="col-md-4">
+										<div class="card" style="width: 18rem;">
+										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
+										  <div class="card-body">
+										    <h5 class="card-title">Card title</h5>
+										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+										  </div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 						<!--=======Fin Noticias=======-->
 					</div>
 				</div>
 			</div>
 		</div>
-
+		<br>
 		<footer class="footer" style="background: #BEBCB0;">
 			<div class="container">
 				<span class="text-muted">Pie de Pagina</span>
@@ -276,6 +316,7 @@
 		<script src="/js/jquery-3.3.1.min.js"></script>
 		<script src="/js/popper.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/carrusel.js"></script>
 		<script src="/js/main.js"></script>
 	</body>
 </html>
