Borrando zona de Noticias y agregando zona de eventos

--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -213,7 +213,7 @@
 						<!--=======Fin Info Estatica=======-->
 
 						<!--===========Junta Directiva=======-->
-						<div class="col-md-12" style="padding-top: 20px; padding-bottom: 20px">
+						<div class="col-md-12" style="background: #C3C7C8; padding-top: 30px; padding-bottom: 30px">
 							<div class="container">
 								<div class="row">
 									<div class="col-md-12 text-center">
@@ -258,55 +258,35 @@
 						</div>
 						<!--========fin Junta Directiva=======-->
 
-						<!--=========Noticias=========-->
-						<div class="col-md-12">
-							<div class="container">
-								<div class="row">
-									<div class="col-md-12 text-center">
-										<h3>Noticias</h3>
-									</div>
-
-									<div class="col-md-4">
-										<div class="card" style="width: 18rem;">
-										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
-										  <div class="card-body">
-										    <h5 class="card-title">Card title</h5>
-										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-										  </div>
+						<!--Eventos-->
+						<div class="col-md-12" style="padding-top: 30px; padding-bottom: 30px">
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<h3>Eventos</h3>
+								</div>
+								<div class="col-md-6">
+									<div class="card">
+										<div class="card-body">
+											hola
 										</div>
 									</div>
+								</div>
 
-									<div class="col-md-4">
-										<div class="card" style="width: 18rem;">
-										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
-										  <div class="card-body">
-										    <h5 class="card-title">Card title</h5>
-										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-										  </div>
-										</div>
-									</div>
-
-									<div class="col-md-4">
-										<div class="card" style="width: 18rem;">
-										  <img class="card-img-top" src="/images/index/gesti.jpg" alt="Card image cap">
-										  <div class="card-body">
-										    <h5 class="card-title">Card title</h5>
-										    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-										    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-										  </div>
+								<div class="col-md-6">
+									<div class="card">
+										<div class="card-body">
+											mundo
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<!--=======Fin Noticias=======-->
+						<!--Fin de Eventos-->
 					</div>
 				</div>
 			</div>
 		</div>
-		<br>
+		
 		<footer class="footer" style="background: #BEBCB0;">
 			<div class="container">
 				<span class="text-muted">Pie de Pagina</span>
