--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -267,7 +267,36 @@
 								<div class="col-md-6">
 									<div class="card">
 										<div class="card-body">
-											hola
+											<div class="article border-bottom" style="margin-bottom: 5px">
+												<h4>Ultimos Eventos</h4>
+											</div>
+											<table class="table table-hover">
+											  <tbody>
+											    <tr>
+											      <td style="width: 15%" class="text-center">
+											      	<p style="font-size: 20pt"><b>24</b></p>
+											      	<p style="margin-top: -25px; margin-bottom: 0px">Julio</p>
+											      </td>
+											      <td>
+											      	<a href=""><h5>Titulo del Evento</h5></a>
+											      	<p>Breve descripción</p>
+											      </td>
+											    </tr>
+
+											    <tr>
+											      <td style="width: 15%" class="text-center">
+											      	<p style="font-size: 20pt"><b>24</b></p>
+											      	<p style="margin-top: -25px; margin-bottom: 0px">Julio</p>
+											      </td>
+											      <td>
+											      	<a href=""><h5>Titulo del Evento</h5></a>
+											      	<p>Breve descripción</p>
+											      </td>
+											    </tr>
+											    
+											  </tbody>
+											</table>
+
 										</div>
 									</div>
 								</div>
